--- a/index.html
+++ b/index.html
@@ -10,19 +10,42 @@
 </head>
 <body>
 
-    <header>
+    <header class="header">
         <nav>
             <h2 class="nav-title">Ma<span class="primary-text">r</span>y</h2>
             <ul>
                 <li>Portfolio</li>
                 <li>Blogs</li>
-                <li><button>Hire</button></li>
+                <li><button class="btn-primary">Hire</button></li>
             </ul>
         </nav>
+
+        <!-- Banner -->
+        <div class="banner">
+            <div>
+                <h3 class="banner-sub-title">Hi, Im</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as
+                    to society behaved moments.
+                </p>
+                <button class="btn-primary">Download CV</button>
+            </div>
+            <img src="/images/hardy.png" alt="Hardy">
+        </div>
 
     </header>
 
     <main>
+
+        <section class="about">
+
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+
+        </section>
 
     </main>
 
