--- a/index.html
+++ b/index.html
@@ -67,6 +67,42 @@
 
         </section>
 
+        <!-- What i do section -->
+
+        <section class="about">
+            <h3 class="section-title">What i do</h3>
+            <p class="skill-description1">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, nulla? Deserunt molestias recusandae a in quae commodi, temporibus quia, optio amet labore, at culpa eveniet.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Assumenda iste iure sequi officia dolore quae, sunt expedita itaque nisi. Aliquam voluptatibus, perferendis totam quae magnam error beatae aliquid quia eligendi nihil assumenda fugiat?</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Iure itaque debitis praesentium ad id fugiat unde. Necessitatibus, quaerat! Non, labore architecto voluptate, cum consectetur tempora quidem, delectus ullam voluptatum animi officiis molestias quaerat.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Neque ullam ut voluptatem illo quia soluta voluptates cupiditate veniam, suscipit praesentium doloribus, at quaerat quasi autem repellat. Possimus in, aliquam asperiores eligendi porro debitis?</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <!-- Resume Section -->
+            <section class="resume">
+                <h3 class="section-title">A summary of My Resume</h3>
+            </section>
+        </section>
+
     </main>
 
     <footer>
