--- a/index.html
+++ b/index.html
@@ -69,45 +69,116 @@
 
         <!-- What i do section -->
 
-        <section class="about">
-            <h3 class="section-title">What i do</h3>
-            <p class="skill-description1">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-            <div class="skills-container">
-                <div class="skill">
+        <section class="what-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skill-container">
+                <div class="skills">
                     <img src="images/icons/js.png" alt="">
-                    <p class="skill-title">Vanilla JavaScript</p>
-                    <p class="skill-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic, nulla? Deserunt molestias recusandae a in quae commodi, temporibus quia, optio amet labore, at culpa eveniet.</p>
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-descripiton">Ullam animi consectetur consequatur adipisci necessitatibus quos dignissimos reiciendis placeat, neque explicabo praesentium id porro.</p>
                 </div>
-                <div class="skill">
+                <div class="skills">
                     <img src="images/icons/react.png" alt="">
-                    <p class="skill-title">React</p>
-                    <p class="skill-description">Assumenda iste iure sequi officia dolore quae, sunt expedita itaque nisi. Aliquam voluptatibus, perferendis totam quae magnam error beatae aliquid quia eligendi nihil assumenda fugiat?</p>
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-descripiton">Perferendis molestias sed inventore incidunt architecto, vero cupiditate dolore magnam veritatis esse nam delectus possimus.</p>
                 </div>
-                <div class="skill">
+                <div class="skills">
                     <img src="images/icons/nodejs.png" alt="">
-                    <p class="skill-title">Node.js</p>
-                    <p class="skill-description">Iure itaque debitis praesentium ad id fugiat unde. Necessitatibus, quaerat! Non, labore architecto voluptate, cum consectetur tempora quidem, delectus ullam voluptatum animi officiis molestias quaerat.</p>
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-descripiton">Molestiae blanditiis atque soluta nam aliquid fugiat odio facere! Expedita ipsam molestias dolore aliquid laudantium!</p>
                 </div>
-                <div class="skill">
+                <div class="skills">
                     <img src="images/icons/mongo.png" alt="">
-                    <p class="skill-title">MongoDB</p>
-                    <p class="skill-description">Neque ullam ut voluptatem illo quia soluta voluptates cupiditate veniam, suscipit praesentium doloribus, at quaerat quasi autem repellat. Possimus in, aliquam asperiores eligendi porro debitis?</p>
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-descripiton">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus dolor, quasi dolorem nesciunt tempore minima!</p>
                 </div>
             </div>
         </section>
 
-        <section>
-            <!-- Resume Section -->
-            <section class="resume">
-                <h3 class="section-title">A summary of My Resume</h3>
-            </section>
+        <!-- resume -->
+
+        <section class="my-resume">
+            <h1>A summary of My Resume</h1>
+            <div class="resume-main">
+                <div class="education">
+                    <h2>My Education</h2>
+                    <div class="education-details">
+                    <div>
+                        <h3>Master in Computer Engineering</h3>
+                        <h5>Harvard University / 2015 - 2017</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor distinctio aspernatur libero hic.</p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3>Master in Computer Engineering</h3>
+                        <h5>Harvard University / 2015 - 2017</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor distinctio aspernatur libero hic.</p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3>Master in Computer Engineering</h3>
+                        <h5>Harvard University / 2015 - 2017</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor distinctio aspernatur libero hic.</p>
+                    </div>
+                </div>
+                </div>
+                
+                <div class="experience">
+                    <h2>My experience</h2>
+                    <div class="experience-details">
+                    <div>
+                        <h3>Sr. Font End Developer</h3>
+                        <h5>Apple Inc / 2020 - Current</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum esse sunt quas odit.</p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3>Sr. Font End Developer</h3>
+                        <h5>Apple Inc / 2020 - Current</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum esse sunt quas odit.</p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3>Sr. Font End Developer</h3>
+                        <h5>Apple Inc / 2020 - Current</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum esse sunt quas odit.</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="cv-btn">
+            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+            </div>
         </section>
-
     </main>
-
-    <footer>
-
-    </footer>
-    
+        <!-- contact -->
+        <section class="contact">
+            <div class="margin">
+            <div class="link">
+                <h3>Lets Connect</h3>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <ul>
+                    <li><a href=""> <img src="images/icons/facebook.png" alt=""> </a></li>
+                    <li><a href=""><img src="images/icons/twitter.png" alt=""></a></li>
+                    <li><a href=""><img src="images/icons/insta.png" alt=""></a></li>
+                </ul>
+            </div>
+            <div class="form-fil">
+                <h3>Let’s Message me</h3>
+                <form action="">
+                    <input type="text" placeholder="Your Name : ">
+                    <input type="email" placeholder="Your Email : ">
+                    <textarea name="" id="" cols="10" rows="3" placeholder="Messsage"></textarea>
+                    <input type="submit" value="Submit" class="btn-primary">
+                </form>
+            </div>
+            </div>
+        </section>
+        <footer>
+            <marquee behavior="" direction="">niloyroy184@gmail.com</marquee>
+            <p>Copy<span>&copy;</span>right : 2024</p>
+        </footer>
+  
 </body>
 </html>
