--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
-    <link rel="stylesheet" href="/styles/portfolio.css">
+    <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -31,7 +31,7 @@
                 </p>
                 <button class="btn-primary">Download CV</button>
             </div>
-            <img src="/images/hardy.png" alt="Hardy">
+            <img src="images/hardy.png" alt="Hardy">
         </div>
 
     </header>
